--- a/front/package.json
+++ b/front/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/grid": "^6.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/next": "^8.0.0",
+    "@types/next-redux-wrapper": "^2.0.2",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^4.4.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "next": "^10.0.3",
+    "next-redux-wrapper": "^3.0.0-alpha.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "redux-devtools-extension": "^2.13.8",
@@ -21,10 +26,11 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": "react-app"
