exams and exam page

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -20,7 +20,8 @@
     "jsx": "preserve"
   },
   "include": [
-    "src"
+    "src",
+    "next.config.js"
   ],
   "exclude": [
     "node_modules"
