--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^4.4.2",
+    "@zeit/next-typescript": "^1.1.1",
     "next": "^10.0.3",
     "next-redux-wrapper": "^3.0.0-alpha.1",
     "react": "^17.0.1",
