--- a/front/package.json
+++ b/front/package.json
@@ -16,13 +16,16 @@
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^4.4.2",
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.21.0",
     "next": "^10.0.3",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^3.0.0-alpha.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
   },
