--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@rebass/grid": "^6.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -22,6 +23,7 @@
     "next-redux-wrapper": "^3.0.0-alpha.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "redux-devtools-extension": "^2.13.8",
