adding interfaz and fix some yarn thing

--- a/code/front/tsconfig.json
+++ b/code/front/tsconfig.json
@@ -18,9 +18,9 @@
     "jsx": "preserve"
   },
   "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
