--- a/code/front/package.json
+++ b/code/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@material-ui/core": "^4.11.2",
     "@rebass/grid": "^6.1.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,7 +13,6 @@
     "@types/next": "^8.0.0",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/node": "^12.0.0",
-    "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^4.4.2",
